--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dev_dependencies:
   flutter_screenutil: ^5.0.0+2
   horizontal_data_table: ^3.4.2
   easy_localization: ^3.0.0
+  collection: ^1.15.0
+  sticky_headers: ^0.2.0
   
 flutter:
   uses-material-design: true
